gc+promotion log lines are missing the GC id

XMLWordPrintable

    • gc
    • b20

      Is there a reason why gc+promotion log lines are missing the GC id?

      [54.898s][info][gc,start ] GC(18) Pause Young (Allocation Failure)
      [57.272s][info][gc,promotion ] Promotion failed
      [57.272s][info][gc,heap ] GC(18) PSYoungGen: 3522688K->3522688K(4032000K)

      The fix seems very straightforward, just add:

      LOG_PREFIX(GCId::print_prefix, LOG_TAGS(gc, promotion))

      to the LOG_PREFIX_LIST in logging/logPrefix.hpp. With the fix:

      [60.220s][info][gc,start ] GC(18) Pause Young (Allocation Failure)
      [62.529s][info][gc,promotion ] GC(18) Promotion failed
      [62.529s][info][gc,heap ] GC(18) PSYoungGen: 3522752K->3522752K(4032000K)

            Assignee:
            Tony Printezis
            Reporter:
            Tony Printezis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: