8223397: gc+promotion log lines are missing the GC id

Reviewed-by: tschatzl, pliden